test/ffi002/expected.out
test023.idr:20:26-36:
   |
20 | %provide (t : Type) with badProvider
   |                          ~~~~~~~~~~~
Type provider error: Always fails

